--- a/templates/index.html
+++ b/templates/index.html
@@ -27,6 +27,7 @@
             </div>
           </div>
           <img id="board-logo" src="{{ url_for('static',filename='images/logo_black.png')}}">
+          <img id="qrcode" src="{{ url_for('static',filename='images/qrcode.png')}}">
           <div class="url-footer">
             <h3>弹幕吐槽在这里: tinyurl.com/yechuan16danmu</h3>
           </div>
