--- a/static/css/cover.css
+++ b/static/css/cover.css
@@ -73,6 +73,7 @@ body {
   display:none;
   position:absolute;
   top:90%;
+  font-size:40px;
   left:20px;
   z-index: 150;
 }
@@ -81,22 +82,22 @@ body {
   display:none;
   position:absolute;
   z-index:101;
-  width:100px;
-  height:100px;
+  width:200px;
+  height:200px;
   /*transform: translate(-50%,-50%);*/
   left:10px;
-  top:80%;
+  top:65%;
 }
 
 #qrcode {
   display:none;
   position:absolute;
   z-index:101;
-  width:100px;
-  height:100px;
+  width:200px;
+  height:200px;
   /*transform: translate(-50%,-50%);*/
   right:10px;
-  top:80%;
+  top:65%;
 }
 
 /*
