Update permanent link, automatically config the year

--- a/templates/index.html
+++ b/templates/index.html
@@ -29,7 +29,7 @@
           <img id="board-logo" src="{{ url_for('static',filename='images/logo_black.png')}}">
           <img id="qrcode" src="{{ url_for('static',filename='images/qrcode.png')}}">
           <div class="url-footer">
-            <h3>弹幕吐槽在这里: tinyurl.com/yechuan16danmu</h3>
+            <h3>弹幕吐槽在这里: http://tinyurl.com/yechuandanmaku</h3>
           </div>
           <!-- Danmu player div -->
           <div id="danmuholder">
